# esp32_audio_stream

./: README.md  esp-audio-streamer.code-workspace
cardputer-sdcard/src/: main-rust-mix.rs  main.rs
cpp/mic-streamer/: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.txt  README.md  SETUP.md  partitions.csv  sdkconfig  sdkconfig.old
cpp/mic-streamer/assets/: README.md  build.sh  chirp_down.h  chirp_down.raw  chirp_up.h  chirp_up.raw
cpp/mic-streamer/main/: CMakeLists.txt  Kconfig.projbuild  audio_output.c  audio_output.h  audio_streamer.c  audio_streamer.h  config_tool.c  config_tool.h  display.c  display.h  i2s_pdm_rx.c  idf_component.yml  main.c  network.c  network.h
cpp/mic-streamer/tools/: .gitignore  audio_20251127_211558.raw  audio_20251127_215251.raw  audio_20251127_215513.raw  audio_20251127_215530.raw  requirements.txt  tcp_server.py
cpp/mic-streamer/tools/mqtt_to_obsidian/: OBSIDIAN_BRIDGE.md  README.md  bridge_config.example.yaml  obsidian_mqtt_bridge.py
cpp/mic-streamer/tools/tcp_server/: .dockerignore  CONFIG.md  README.md  requirements.txt  sample_config.yaml
esp-audio-streamer/: Cargo.toml  sdkconfig.defaults
esp-audio-streamer/src/: main.rs  sdcard.rs
esp-audio-streamer/src/streaming/: rtp_packet.rs  rtsp.rs
esp-audio-streamer/src/wifi_management/: .gitignore  mod.rs
pdm-idf-test/: sdkconfig
rust/cardputer-sdcard/: Cargo.toml
rust/cardputer-sdcard/src/: main.rs
rust/esp-audio-streamer/: CHANGELOG.md  Cargo.toml  README.md
rust/esp-audio-streamer/.cargo/: config.toml
rust/esp-audio-streamer/src/: main.rs  sdcard.rs
rust/esp-audio-streamer/src/wifi_management/: mod.rs
rust/pdm-idf-test/: CMakeLists.txt  sdkconfig.old
rust/udp_receive_server/src/: main.rs
tools/mqtt_to_obsidian/: .gitignore  OBSIDIAN_BRIDGE.md  obsidian_mqtt_bridge.py  run_bridge.sh  test_bridge.sh
tools/tcp_server/: .gitignore  Dockerfile  README.md  config.example.yaml  convert_to_wav.sh  docker-compose.yml  stenographer.ufw  tcp_server.py
udp_receive_server/: Cargo.toml  output.raw
udp_receive_server/src/: main.rs
