[package]
name = "esp-audio-streamer"
version = "0.1.0"
authors = ["benvh"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "esp-audio-streamer"
harness = false # do not use the built in cargo test harneess -> resolve rust-analyzer errors

[profile.release]
debug = false
opt-level = "s"
#lto = "fat"
strip = true
panic = "abort"

[profile.dev]
debug = true
opt-level = "z"
lto = "off"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]

log = { version = "0.4.22", default-features = false }
esp-idf-svc = { version = "0.51.0", default-features = false, features= ["experimental"] }
anyhow = "1.0.89"

[build-dependencies]
embuild = "0.33.1"
